<resources>
    <string name="app_name">digimind_189029</string>
    <string name="title_home">My board</string>
    <string name="title_dashboard">New reminder</string>
    <string name="what_do_you_want_to_remember">What do you want to remember?</string>
    <string name="when_you_want_to_do_it">When you want to do it?</string>
    <string name="take_my_pill">Take my pill</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="at_what_time">At what Time?</string>
</resources>