<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    tools:context=".ui.dashboard.DashboardFragment">
    <ImageView
        android:id="@+id/img_logo_tittle"
        android:layout_width="271dp"
        android:layout_height="155dp"
        android:layout_gravity="center"
        android:src="@drawable/logobrain"
        />



    <TextView
                android:id="@+id/TV_rememberTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="normal"
                android:textSize="20sp"
                android:text="@string/what_do_you_want_to_remember"/>
            <EditText
                android:id="@+id/EditTxtPills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/take_my_pill"
                android:inputType="text"/>
    <TextView
        android:id="@+id/TV_whenyouwant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/when_you_want_to_do_it"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="normal" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:text="@string/monday"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:text="@string/tuesday"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:text="@string/wednesday"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:text="@string/thursday"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:text="@string/friday"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:text="@string/saturday"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:text="@string/sunday"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/at_what_time"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>

</LinearLayout>